# Sailor

./: .gitignore  README.md  dev.sh
backend/: .env.example  CLAUDE.md  pyproject.toml  supabase_schema.sql  test_page_extraction.py
backend/app/: api_router.py  main.py
backend/app/core/: config.py  database.py  embedding_client.py  embedding_models.py  logger.py  model_manager.py  qdrant_client.py  supabase_client.py
backend/app/features/chat/application/: chat_with_context.py  query_documents.py
backend/app/features/chat/domain/: entities.py  repository_interface.py
backend/app/features/chat/infrastructure/: retriever_qdrant.py
backend/app/features/chat/presentation/: routes.py  schemas.py
backend/app/features/documents/application/: chunk_document.py  embed_document.py  index_document.py  process_and_chunk_document.py  process_document.py  upload_document.py  upsert_document.py
backend/app/features/documents/domain/: entities.py  repository_interface.py  value_objects.py
backend/app/features/documents/infrastructure/: docling_remote_service.py  document_repository_pg.py  embedding_repository_qdrant.py  (+4 more)
backend/app/shared/: exceptions.py  helpers.py  interfaces.py
backend/docling_service/: README.md  main.py  pyproject.toml
backend/migrations/: 002_add_storage_path_and_chunk_count.sql
backend/output/: .gitignore
backend/output/markdown/: EXAMPLES.py  README.md  sample-tables_20251105_140516_chonkie.md  sample-tables_20251105_140516_pymupdf4llm.md
backend/output_markdown/: 9db142a7-8baa-4a6f-afd9-9a695fdba96b.md
backend/scripts/: init_db.py
(+7 files in other folders)
