[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "asyncpg>=0.30.0",
    "chonkie>=1.4.0",
    "fastapi>=0.121.0",
    "fastembed>=0.7.3",
    "groq>=0.33.0",
    "llama-index-core>=0.14.7",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pymupdf>=1.26.5",
    "pymupdf4llm>=0.0.27",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.2",
    "supabase>=2.24.0",
    "uvicorn>=0.38.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*"]
